--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,8 @@
 name = "HampelOutliers"
 uuid = "73128a4d-6a7f-4139-a44b-cef6f554cba0"
 authors = ["Toby Driscoll <driscoll@udel.edu>"]
-version = "0.1.0"
+version = "0.1.1"
 
 [deps]
+Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
